--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -21,7 +21,7 @@
 							 required="false" requiredMessage="Informe o login"  />
 				
 				<h:outputLabel value="Password: "/> 
-				<h:inputSecret value="#{pessoaBean.pessoa.senha}"  pt:placeholder="write admin here" 
+				<h:inputSecret value="#{pessoaBean.pessoa.senha}"  pt:placeholder="write 123 here" 
 								required="false" requiredMessage="Informe a senha"  /> <br></br><br></br>
 				
 				<h:commandButton value="Acessar" action="#{pessoaBean.logar}" />
