--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -18,11 +18,11 @@
 			<h:panelGrid columns="2">
 				<h:outputLabel value="Login: "/> 
 				<h:inputText value ="#{pessoaBean.pessoa.login}"  pt:placeholder="write admin here" 
-							 required="false" requiredMessage="Informe o login"  />
+							 required="true" requiredMessage="Login required"  />
 				
 				<h:outputLabel value="Password: "/> 
 				<h:inputSecret value="#{pessoaBean.pessoa.senha}"  pt:placeholder="write 123 here" 
-								required="false" requiredMessage="Informe a senha"  /> <br></br><br></br>
+								required="true" requiredMessage="Password required"  /> <br></br><br></br>
 				
 				<h:commandButton value="Acessar" action="#{pessoaBean.logar}" />
 			</h:panelGrid>		
