deploy aws : improvments in Reports

--- a/src/main/webapp/info.xhtml
+++ b/src/main/webapp/info.xhtml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="ISO-8859-1" ?>
+<?xml version="1.0" encoding="UTF-8" ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Frameset//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-frameset.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://java.sun.com/jsf/html"
@@ -16,8 +16,21 @@
 <h:body>
 
 	<ui:include src="/menu.xhtml" />
-	<div style="margin-left: 5%; margin-right: 5%; margin-bottom: 3%">
-		Informations.... comming
+	<div style="margin-left: 5%; margin-right: 5%; margin-bottom: 5%; margin-top: 5% ; width: 600px; text-align: justify ">
+		Informations.... comming >>> We and our partners store and/or access information on a device, such as cookies and 
+		process personal data, such as unique identifiers and standard information sent by a device for personalised ads and content, 
+		ad and content measurement, and audience insights, as well as to develop and improve products. With your permission we and our
+		partners may use precise geolocation data and identification through device scanning. You may click to consent to our and our
+		partners’ processing as described above. Alternatively you may access more detailed information and change your preferences 
+		before consenting or to refuse consenting. Please note that some processing of your personal data may not require your consent, 
+		but you have a right to object to such processing.
+		Informations.... comming >>> We and our partners store and/or access information on a device, such as cookies and 
+		process personal data, such as unique identifiers and standard information sent by a device for personalised ads and content, 
+		ad and content measurement, and audience insights, as well as to develop and improve products. With your permission we and our
+		partners may use precise geolocation data and identification through device scanning. You may click to consent to our and our
+		partners’ processing as described above. Alternatively you may access more detailed information and change your preferences 
+		before consenting or to refuse consenting. Please note that some processing of your personal data may not require your consent, 
+		but you have a right to object to such processing.
 	</div>
 
 </h:body>
