--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -24,7 +24,7 @@
 				<h:inputSecret value="#{pessoaBean.pessoa.senha}"  pt:placeholder="write 123 here" 
 								required="true" requiredMessage="Password required"  /> <br></br><br></br>
 				
-				<h:commandButton value="Acessar" action="#{pessoaBean.logar}" />
+				<h:commandButton value="Access" action="#{pessoaBean.logar}" />
 			</h:panelGrid>		
 								
 		</h:form>
