--- a/src/main/webapp/info.xhtml
+++ b/src/main/webapp/info.xhtml
@@ -16,21 +16,19 @@
 <h:body>
 
 	<ui:include src="/menu.xhtml" />
-	<div style="margin-left: 5%; margin-right: 5%; margin-bottom: 5%; margin-top: 5% ; width: 600px; text-align: justify ">
-		Informations.... comming >>> We and our partners store and/or access information on a device, such as cookies and 
-		process personal data, such as unique identifiers and standard information sent by a device for personalised ads and content, 
-		ad and content measurement, and audience insights, as well as to develop and improve products. With your permission we and our
-		partners may use precise geolocation data and identification through device scanning. You may click to consent to our and our
-		partners’ processing as described above. Alternatively you may access more detailed information and change your preferences 
-		before consenting or to refuse consenting. Please note that some processing of your personal data may not require your consent, 
-		but you have a right to object to such processing.
-		Informations.... comming >>> We and our partners store and/or access information on a device, such as cookies and 
-		process personal data, such as unique identifiers and standard information sent by a device for personalised ads and content, 
-		ad and content measurement, and audience insights, as well as to develop and improve products. With your permission we and our
-		partners may use precise geolocation data and identification through device scanning. You may click to consent to our and our
-		partners’ processing as described above. Alternatively you may access more detailed information and change your preferences 
-		before consenting or to refuse consenting. Please note that some processing of your personal data may not require your consent, 
-		but you have a right to object to such processing.
+	<div style="margin-left: 15%; margin-right: 5%; margin-bottom: 5%; 
+		margin-top: 5% ; width: 600px; text-align: justify; font-family: verdana">
+		<h3>About the System</h3>
+		<p>This model system registers users, and entries made by each user. Registration forms have validations. After logging in, 
+		a list of users already saved in the system is loaded. Each user can log into the system using their login and password, 
+		but only users with Administrator privileges can delete and edit. On the Lauch page, releases can be registered for 
+		the logged in user. There are report generation pages for launch and for the user, in which it´s possible to search for 
+		results through filters or not and generate a PDF report.</p>
+		<p>Tolls - Technical Information: Eclipse IDE, Postgresql, Java Server Faces, Hibernate, BootFaces.</p>
+		<p><a href="https://github.com/natanjava/JSF-intro" target="_blank">GitHub Link</a>.  
+		</p>
+		
+		
 	</div>
 
 </h:body>
