--- a/src/main/webapp/paginanavegada.xhtml
+++ b/src/main/webapp/paginanavegada.xhtml
@@ -3,12 +3,12 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://java.sun.com/jsf/html">
 
 	<h:head>
-		<title>Olá Jsf</title>
+		<title>Hello Jsf</title>
 	</h:head>
 	
 	<h:body>
 		<h:form id="forPessoa">
-			<h1>Ola pagina paginanavegada.jsf</h1>
+			<h1>Hello , it´s only a Teste</h1>
 					
 					
 		</h:form>
