--- a/src/main/webapp/info.xhtml
+++ b/src/main/webapp/info.xhtml
@@ -24,7 +24,8 @@
 		but only users with Administrator privileges can delete and edit. On the Lauch page, releases can be registered for 
 		the logged in user. There are report generation pages for launch and for the user, in which it´s possible to search for 
 		results through filters or not and generate a PDF report.</p>
-		<p>Tolls - Technical Information: Eclipse IDE, Postgresql, Java Server Faces, Hibernate, BootFaces.</p>
+		<p>Tolls - Technical Information: Eclipse IDE, Postgresql, EC2 Amanzon Tecnology (deploy on cloud Server).
+		Java Server Faces, Hibernate, CDI, BootFaces.</p>
 		<p><a href="https://github.com/natanjava/JSF-intro" target="_blank">GitHub Link</a>.  
 		</p>
 		
