--- a/src/main/webapp/info.xhtml
+++ b/src/main/webapp/info.xhtml
@@ -20,9 +20,9 @@
 		margin-top: 5% ; width: 600px; text-align: justify; font-family: verdana">
 		<h3>About the System</h3>
 		<p>This model system registers users, and entries made by each user. Registration forms have validations. After logging in, 
-		a list of users already saved in the system is loaded. Each user can log into the system using their login and password, 
-		but only users with Administrator privileges can delete and edit. On the Lauch page, releases can be registered for 
-		the logged in user. There are report generation pages for launch and for the user, in which it´s possible to search for 
+		a list of users already saved in the system is loaded. Each user can log into the system using their own login and password, 
+		but only users with Administrator privileges can delete and update other registers. On the Lauch page, caunches can be registered 
+		for the logged user at the moment. There are report generation pages for launch and for the user, in which it´s possible to search for 
 		results through filters or not and generate a PDF report.</p>
 		<p>Tolls - Technical Information: Eclipse IDE, Postgresql, EC2 Amanzon Tecnology (deploy on cloud Server).
 		Java Server Faces, Hibernate, CDI, BootFaces.</p>
