--- a/src/main/webapp/menu.xhtml
+++ b/src/main/webapp/menu.xhtml
@@ -18,7 +18,9 @@
 		       <b:navCommandLink action="relusuario" value="Users"/>
 		     </b:dropMenu>
 		     
-		     <b:navCommandLink value="Info(s)" action="info" />		     
+		     <b:navCommandLink action="launchRequest" value="Launch request"/>
+		     
+		     <b:navCommandLink value="Info(s)" action="info"/>		     
 
 		     <b:navCommandLink value="Log off" action="#{pessoaBean.deslogar}" />
 		  </b:navbarLinks>
