--- a/src/main/webapp/rellancamento.xhtml
+++ b/src/main/webapp/rellancamento.xhtml
@@ -46,6 +46,8 @@
 				<b:dataTableColumn value="#{lanc.empresaOrigem}" label="Supplier" />
 	
 				<b:dataTableColumn value="#{lanc.usuario.nome}" label="Author of the Launch" />
+				
+				<b:dataTableColumn value="#{lanc.status}" label="Status" />
 	
 				<b:dataTableColumn value="#{lanc.dataIni}" label="Date of order" />
 	
