--- a/src/main/webapp/company.xhtml
+++ b/src/main/webapp/company.xhtml
@@ -7,7 +7,7 @@
 	xmlns:b="http://bootsfaces.net/ui">
 
 <h:head>
-	<title>Pedidos</title>
+	<title>Companies</title>
 </h:head>
 
 <h:body>
@@ -18,7 +18,7 @@
 		<b:messages id="msg-launch" />
 		
 		<div style="width: 800px; text-align: justify;">
-		<h4>Registration of new partner Company. Only Assistent can insert new Companies in the System.</h4>
+		<h4>Registration of new partner Company. Only <b>ASSISTENT</b> can insert new Companies in the System.</h4>
 		</div>
 	
 		<h:form id="formLancamento" style="margin-top:2%;" rendered="#{pessoaBean.permiteAcesso('ASSISTENT')}">
