login self-exclusion; avoid wrong date when saving launch

--- a/src/main/webapp/menu.xhtml
+++ b/src/main/webapp/menu.xhtml
@@ -12,7 +12,7 @@
 		 <b:navbarLinks>
 		 	<b:dropMenu value="New">
 		 	 <b:navCommandLink value="User" action="primeirapagina"  />
-		   	 <b:navCommandLink value="Launches" action="lancamento" />
+		   	 <b:navCommandLink value="Launche" action="lancamento" />
 		     <b:navCommandLink value="Company" action="company"/>		     
 		 	</b:dropMenu>
 		  
